--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,8 @@ workflows:
   maven_test:
     jobs:
       - maven/test # checkout, build, test, and upload test results
+
+    build:
+      docker:
+        # specify the version you desire here
+        - image: circleci/openjdk:11-browsers-legacy
