--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.initialization-mode=EMBEDDED
 sfg.brewery.beer-inventory-service-host=http://localhost:8082
 spring.cache.jcache.config=classpath:ehcache.xml
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
+
+# Defaults for docker image vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
