Configure events and listeners between microservices using JMS/ActiveMQ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 # Defaults for docker image vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+logging.level.guru.springframework=debug
