--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
 logging.level.guru.springframework=debug
+
+# Spring Data hangs when not set under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
