--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.level.guru.springframework=debug
 
 # Spring Data hangs when not set under Spring Boot 2.3.0
 spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.zipkin.enabled=false
