--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>MSSC Beer Service - initial project</description>
 
     <properties>
-        <docker.image.prefix>sfgbeerkcm3394</docker.image.prefix>
+        <docker.image.prefix>kcm3394</docker.image.prefix>
     </properties>
 
     <dependencies>
